@@ -8,6 +8,7 @@ Unmerdify alpha support (by Vincent Jousse):
 - "info" now explain how the content was cleaned
 Imortant changes:
 - Default image size now 100 instead of 40 (can be restored with "set images_size 40")
+- Links to available feeds are now displayed at the bottom of HTML pages
 Features:
 - new "websearch" command which default to wiby.me
 - new "share" command to send a page by email
